tests/ui/args-flatten-positional.stderr
error[E0080]: evaluation panicked: TODO: cannot arg(flatten) positional arguments yet
 --> tests/ui/args-flatten-positional.rs:6:12
  |
6 |     inner: Inner,
  |            ^^^^^ evaluation of `_::<impl palc::__private::Args for Outer>::__parse::_` failed here
